--- a/Household-Budgeter/Household-Budgeter.csproj
+++ b/Household-Budgeter/Household-Budgeter.csproj
@@ -224,6 +224,7 @@
     <Compile Include="Models\CategoriesViewModel.cs" />
     <Compile Include="Models\Domain\Categories.cs" />
     <Compile Include="Models\Domain\Households.cs" />
+    <Compile Include="Models\Domain\HouseholdsBindingModel.cs" />
     <Compile Include="Models\HouseholdsViewModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -261,6 +262,7 @@
     <Content Include="Areas\HelpPage\Views\Help\DisplayTemplates\CollectionModelDescription.cshtml" />
     <Content Include="Areas\HelpPage\Views\Help\DisplayTemplates\ApiGroup.cshtml" />
     <Content Include="Areas\HelpPage\Views\Help\Api.cshtml" />
+    <Content Include="private.config" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
