Working On DisplayList of Users.

--- a/Household-Budgeter/Web.config
+++ b/Household-Budgeter/Web.config
@@ -14,7 +14,7 @@
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Household-Budgeter-20190513092044.mdf;Initial Catalog=aspnet-Household-Budgeter-20190513092044;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
-  <appSettings></appSettings>
+  <appSettings file="private.config"></appSettings>
   <system.web>
     <authentication mode="None"/>
     <compilation debug="true" targetFramework="4.6"/>
