--- a/Household-Budgeter/Household-Budgeter.csproj
+++ b/Household-Budgeter/Household-Budgeter.csproj
@@ -212,6 +212,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\CategoriesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\HouseholdsController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
@@ -221,12 +222,16 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\CategoriesBindingModel.cs" />
     <Compile Include="Models\CategoriesViewModel.cs" />
+    <Compile Include="Models\DisplayUsersViewModel.cs" />
     <Compile Include="Models\Domain\Categories.cs" />
     <Compile Include="Models\Domain\Households.cs" />
     <Compile Include="Models\Domain\HouseholdsBindingModel.cs" />
+    <Compile Include="Models\EmailService.cs" />
     <Compile Include="Models\HouseholdsViewModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\Invitation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
