--- a/Household-Budgeter/Household-Budgeter.csproj
+++ b/Household-Budgeter/Household-Budgeter.csproj
@@ -212,9 +212,11 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\BankAccountController.cs" />
     <Compile Include="Controllers\CategoriesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\HouseholdsController.cs" />
+    <Compile Include="Controllers\TransactionController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -222,16 +224,22 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\BankAccountBindingModel.cs" />
+    <Compile Include="Models\BankAccountViewModel.cs" />
     <Compile Include="Models\CategoriesBindingModel.cs" />
     <Compile Include="Models\CategoriesViewModel.cs" />
     <Compile Include="Models\DisplayUsersViewModel.cs" />
+    <Compile Include="Models\Domain\BankAccount.cs" />
     <Compile Include="Models\Domain\Categories.cs" />
     <Compile Include="Models\Domain\Households.cs" />
     <Compile Include="Models\Domain\HouseholdsBindingModel.cs" />
+    <Compile Include="Models\Domain\Transaction.cs" />
+    <Compile Include="Models\Domain\TransactionViewModel.cs" />
     <Compile Include="Models\EmailService.cs" />
     <Compile Include="Models\HouseholdsViewModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\Invitation.cs" />
+    <Compile Include="Models\TransactionBindingModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
